[gd_scene load_steps=3 format=2]

[ext_resource path="res://Game/Datapacks/UI/PackVarUIs/AddRemoveListVarUI.gd" type="Script" id=1]
[ext_resource path="res://Game/Datapacks/UI/PackVarUIs/AutoSelectorVarUI.tscn" type="PackedScene" id=2]

[node name="AddRemoveListVarUI" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_right = 1280.0
margin_bottom = 14.0
size_flags_vertical = 5
text = "asdf"
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 18.0
margin_right = 1280.0
margin_bottom = 38.0

[node name="AddButton" type="Button" parent="HBoxContainer"]
margin_right = 37.0
margin_bottom = 20.0
text = "Add"

[node name="OptionButton" type="OptionButton" parent="HBoxContainer"]
visible = false
margin_left = 41.0
margin_right = 1078.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="AddItemList" type="ItemList" parent="HBoxContainer"]
visible = false
margin_left = 839.0
margin_right = 1239.0
margin_bottom = 60.0
rect_min_size = Vector2( 500, 80 )

[node name="AutoSelectorVarUI" parent="HBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 41.0
margin_right = 1280.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
margin_top = 42.0
margin_right = 1280.0
margin_bottom = 62.0

[node name="RemoveButton" type="Button" parent="HBoxContainer2"]
margin_right = 64.0
margin_bottom = 20.0
text = "Remove"

[node name="ClearButton" type="Button" parent="HBoxContainer2"]
margin_left = 68.0
margin_right = 131.0
margin_bottom = 20.0
text = "Clear all"

[node name="UpButton" type="Button" parent="HBoxContainer2"]
margin_left = 135.0
margin_right = 154.0
margin_bottom = 20.0
text = "^"

[node name="DownButton" type="Button" parent="HBoxContainer2"]
margin_left = 158.0
margin_right = 177.0
margin_bottom = 20.0
text = "v"

[node name="ItemList" type="ItemList" parent="."]
margin_top = 66.0
margin_right = 1280.0
margin_bottom = 166.0
rect_min_size = Vector2( 0, 100 )

[connection signal="pressed" from="HBoxContainer/AddButton" to="." method="_on_AddButton_pressed"]
[connection signal="onValueChange" from="HBoxContainer/AutoSelectorVarUI" to="." method="_on_AutoSelectorVarUI_onValueChange"]
[connection signal="pressed" from="HBoxContainer2/RemoveButton" to="." method="_on_RemoveButton_pressed"]
[connection signal="pressed" from="HBoxContainer2/ClearButton" to="." method="_on_ClearButton_pressed"]
[connection signal="pressed" from="HBoxContainer2/UpButton" to="." method="_on_UpButton_pressed"]
[connection signal="pressed" from="HBoxContainer2/DownButton" to="." method="_on_DownButton_pressed"]
